Correction of the scroll taking too much place

--- a/resources/css/graph.css
+++ b/resources/css/graph.css
@@ -148,9 +148,9 @@ div#schedule				{ margin: 20px; color:#8b8b8b; width: 260px; }
 span.listDate				{ padding-top:10px; padding-bottom:4px; display:block; }
 #filterItemTemplate			{ display:none; }
 li#listItemTemplate			{ display:none; }
-li.listItem					{ background: rgb(246, 246, 246); background: rgba(246, 246, 246, 0.8);}
-li.listItem					{ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#C8f5f5f5, endColorstr=#C0f5f5f5); -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0F0F0F0, endColorstr=#C0F0F0F0)"; }
-li.listItem 				{ display: block;
+li.listItem, li.filterItem					{ background: rgb(246, 246, 246); background: rgba(246, 246, 246, 0.8);}
+li.listItem, li.filterItem					{ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#C8f5f5f5, endColorstr=#C0f5f5f5); -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#C0F0F0F0, endColorstr=#C0F0F0F0)"; }
+li.listItem, li.filterItem 				{ display: block;
 							  list-style: none; 
 							  border: 1px solid #aaa; 
 							  width: 100%; 
@@ -239,7 +239,8 @@ div.scheduleSelect			{ filter:progid:DXImageTransform.Microsoft.gradient(startCo
 
 /* Forms styling */
 
-.form-w						{ margin: 15px 20px; }	
+.form-w						{ margin: 15px 20px;
+}	
 .form	 input[type=text], textarea 	{
 							  font-size: 1em;
 							  -webkit-transition: border-color .2s ease-out,-webkit-box-shadow .2s ease-out;
@@ -253,7 +254,7 @@ div.scheduleSelect			{ filter:progid:DXImageTransform.Microsoft.gradient(startCo
 							  color: #666;
 							  padding: 8px 5px;
 							  font-size: 13px;
-							  width: 100%;
+							  width: 96%;
 							  box-shadow: inset 0 0 3px rgba(1,1,1,.2);
 							  }
 .form select				 {
@@ -268,7 +269,7 @@ div.scheduleSelect			{ filter:progid:DXImageTransform.Microsoft.gradient(startCo
 							  box-shadow: 0 0 6px 0 #4b9de3;
 							  border: 1px solid #4b9de3 !important; }
 
-.form	label 				{
+.form label 				{
 							  vertical-align: -4px;
 							  padding-top: 8px;
 							  padding-bottom: 3px;
